--- a/로그 수집하기/nginx-filebeat.yaml
+++ b/로그 수집하기/nginx-filebeat.yaml
@@ -24,3 +24,14 @@ spec:
           volumeMounts:
             - name: nginx-logs
               mountPath: var/log/nginx/
+            - name: filebeat-config
+              mountPath: /usr/share/filebeat/filebeat.yml
+              subPath: filebeat.yml
+    volumes:
+      - name: nginx-logs
+      - name: filebeat-config
+        configMap:
+          name: filebeat-config
+          items:
+            - key: filebeat.yml
+              path: filebeat.yml
