--- a/flask-msa/details-nodeport.yaml
+++ b/flask-msa/details-nodeport.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: details-svc
+  name: details-nodeport
   labels:
     app: details
 spec:
+  type: NodePort
   ports:
   - port: 80
     name: http
   selector:
     app: details
-    
